<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202C74"
    tools:context=".EndGameFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="86dp"
        android:layout_height="74dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/white_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/project_name"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="50dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="50dp"
        android:background="#2AC87B"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/view_statistics"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:backgroundTint="#2AC87B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:background="#2AC87B"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/HomeButton"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:backgroundTint="#2AC87B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EndGameBanner" />

    <TextView
        android:id="@+id/EndGameBanner"
        android:layout_width="257dp"
        android:layout_height="62dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>
